# tftanalysis

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tftanalysis/: __init__.py  match_history.py  meta_analysis.py  show_player_info.py
tests/: test_match_history.py  test_meta_analysis.py  test_show_player_info.py  test_tftanalysis.py
